# rag

./: pyproject.toml
data/text_files/: data_science.txt  machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
